@@ -1,3 +1,10 @@
+CHANGELOG for Imagoxy 0.52 / 2009-07-31
+========================================
+1. Add parameters '$check_reffer_before_download' and '$check_reffer_before_show'. Users can determine when to check HTTP_REFERER.
+2. Use '$legal_pattern' instead of '$legal_type'. Users can restrict legal file URL patterns more flexibly by regular expression.
+
+
+
 CHANGELOG for Imagoxy 0.51 / 2009-07-20
 ========================================
 1. Support original URL with query string.
